# CuCAMASim

./: .gitignore  .gitmodules  CMakeLists.txt  CuCAMASim.cpp  accuracy_with_hardboundary.yml  main.cpp  readme.md
.devcontainer/: Dockerfile  devcontainer.json
CuCAMASim/: CMakeLists.txt  CuCAMASim.cpp
CuCAMASim/arch/: ArchEstimator.cpp  CMakeLists.txt
CuCAMASim/function/: CMakeLists.txt  FunctionSimulator.cpp  convert.cpp  mapping.cpp  quantize.cpp  search.cpp  writeNoise.cpp
CuCAMASim/function/cuda/: CMakeLists.txt  distance.cu  distance.cuh  distance.h  merge.cu  rram.cu  search.cu  sensing.cu  util.cu  writeNoise.cu
CuCAMASim/include/: CuCAMASim.h
CuCAMASim/include/arch/: ArchEstimator.h
CuCAMASim/include/function/: FunctionSimulator.h  convert.h  mapping.h  quantize.h  search.h  writeNoise.h
CuCAMASim/include/function/cuda/: distance.cuh  merge.cuh  rram.cuh  search.cuh  sensing.cuh  util.cuh  writeNoise.cuh
CuCAMASim/include/performance/: PerformanceEvaluator.h
CuCAMASim/include/util/: config.h  consts.h  data.h
CuCAMASim/performance/: CMakeLists.txt
CuCAMASim/util/: CMakeLists.txt  config.cpp  data.cpp
applications/DecisionTree/: CMakeLists.txt  dt2cam.cpp  dt2cam.h
data/camConfig/: hard bd.yml  soft bd th match.yml
data/config/: hard bd.yml  soft bd th match.yml
data/datasets/: save2mat.py
data/datasets/BelgiumTSC/: .gitignore  BTSC.py  BTSC_adapted.py
data/datasets/MNIST/: MNIST.py  save2mat.py
data/datasets/breast_cancer/: breast_cancer.py  readme.md  save2mat.py
data/datasets/eye_movements/: eye_movements.py  readme.md
data/datasets/gas_concentrations/: gas_concentrations.py
data/datasets/gesture_phase_segmentation/: gesture_phase_segmentation.py  readme.md
data/datasets/iris/: .gitignore  iris.py  save_rand_data_2d.py
data/datasets/survival/: readme.md  save2mat.py  survival.py
data/softwareInfConfig/: config.yml
data/treeText/: exampleTreeText.txt  saveTreeText.py
data/treeText/BTSC/: BTSC_adapted_rand.txt
data/treeText/MNIST/: MNIST.txt  MNIST_normalized.txt  MNIST_small.txt  MNIST_small_normalized.txt  saveTreeText.py
data/treeText/breast_cancer/: breast_cancer.txt  breast_cancer_normalized.txt  saveTreeText.py
data/treeText/eye_movements/: eye_movements.txt  eye_movements_normalized.txt  saveTreeText.py
data/treeText/gas/: gas.txt  gas_normalized.txt  saveTreeText.py
data/treeText/gesture_phase_segmentation/: gesture_phase_segmentation.txt  gesture_phase_segmentation_normalized.txt  saveTreeText.py
data/treeText/iris/: iris.txt  iris_normalized.txt
data/treeText/survival/: saveTreeText.py  survival_normalized.txt
devcontainer/: Dockerfile  devcontainer.json
doc/: decision_tree_example.md
